--- a/web/header.html
+++ b/web/header.html
@@ -1,2 +1,6 @@
-<nav><a href="/main.jsp">main</a> | <a href="#">Contact</a> | <a href="#">About</a></nav>
-<h2>Hello JSP</h2>
+
+
+
+<nav><a href="/main">Main</a> | <a href="/Categories">Categories</a> | <a href="/Clients">Clients</a>| <a
+        href="/Comments">Comments</a></nav>
+<h2 lang="ru">Money manager</h2>
